# CacheLib

./: .gitignore  RELEASE_NOTES.md  UPDATE_NOTES.md
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
cachelib/common/: CMakeLists.txt
examples/java-client/: README.md  dependency-reduced-pom.xml  pom.xml
examples/java-client/src/main/java/com/facebook/cachelib/grpc/client/: CacheLibClient.java  CacheLibClientDemo.java  CacheLibException.java
examples/spring-cachelib-demo/: Dockerfile  README.md  docker-compose.yml  pom.xml
examples/spring-cachelib-demo/src/main/java/com/example/demo/client/: CacheLibClient.java
examples/spring-cachelib-demo/src/main/java/com/example/demo/config/: CacheLibConfig.java
examples/spring-cachelib-demo/src/main/java/com/example/demo/controller/: CacheController.java  UserController.java
examples/spring-cachelib-demo/src/main/java/com/example/demo/service/: UserService.java
examples/spring-cachelib-demo/src/main/proto/: cache.proto
examples/spring-cachelib-demo/src/main/resources/: application.yml
standalone_server/: CMakeLists.txt  CacheManager.cc  CacheManager.h  CacheServiceImpl.cc  CacheServiceImpl.h  DOCKER_USAGE.md  Dockerfile  MetricsServer.cc  MetricsServer.h  README.md  build.sh  docker-compose.yml  server.cc
standalone_server/cmake/: FindGTest.cmake  FindNUMA.cmake  FindSodium.cmake  FindXxhash.cmake
standalone_server/proto/: cache.proto
standalone_server/tests/: CacheManagerTest.cc  CacheServiceTest.cc
